--- a/css/style.css
+++ b/css/style.css
@@ -4167,12 +4167,25 @@ a.list-group-item:hover + a.list-group-item {
   overflow: hidden;
   border-radius: 5px;
   -webkit-border-radius: 5px;
-  border: 0;
   background: #fff;
   color: #000;
+  border: 1px groove #0e6957;
 }
 .md-content .modal-header {
   border-bottom: 0;
+  padding-bottom: 40px;
+background-image: -webkit-gradient(
+	linear,
+	left top,
+	left bottom,
+	color-stop(0, #4DAB9E),
+	color-stop(1, #9DE8E4)
+);
+background-image: -o-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -moz-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -webkit-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -ms-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: linear-gradient(to bottom, #4DAB9E 0%, #9DE8E4 100%);
 }
 .md-content h4,
 .modal-content h4 {
@@ -4188,9 +4201,20 @@ a.list-group-item:hover + a.list-group-item {
 }
 .md-content .modal-footer {
   /*margin-top: 0;*/
-  background: #FBFBFB;
   border-radius: 0 0 5px 5px;
   -webkit-border-radius: 0 0 5px 5px;
+background-image: -webkit-gradient(
+	linear,
+	left top,
+	left bottom,
+	color-stop(0, #4DAB9E),
+	color-stop(1, #9DE8E4)
+);
+background-image: -o-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -moz-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -webkit-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: -ms-linear-gradient(bottom, #4DAB9E 0%, #9DE8E4 100%);
+background-image: linear-gradient(to bottom, #4DAB9E 0%, #9DE8E4 100%);
 }
 .md-show.md-effect-12 ~ .md-overlay {
   background: #7761a7;
@@ -4840,6 +4864,10 @@ table .primary-emphasis-dark {
   border-color: #7761a7;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
+th.primary-emphasis ,td.primary-emphasis {
+	border-bottom: 1px dotted white;
+}
+
 table .primary-emphasis-dark {
   background-color: #634d93;
 }
