--- a/css/style.css
+++ b/css/style.css
@@ -5532,7 +5532,7 @@ h1:first-child {
   border-radius: 5px;
 }
 .cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel {
-  background: #7761a7;
+  background: #62577B;
 }
 .cbp_tmtimeline > li .cbp_tmlabel h2 {
   margin-top: 0px;
@@ -6614,3 +6614,35 @@ h1:first-child {
 
 /*fixes*/
 .datepicker-plot-area{z-index: 3000}
+.cbp_tmtimeline > li .comment_icon {
+    width: 40px;
+    height: 40px;
+    font-size: 1.4em;
+    line-height: 40px;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    color: #fff;
+    background: #F4F3F7;
+    border-radius: 50%;
+    box-shadow: 0 0 0 8px #9f89cf;
+    text-align: center;
+    right: 20%;
+    top: 7px;
+    margin: 0 -25px 0 0;
+}
+.cbp_tmtimeline > li .comment_icon >img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.cbp_tmtimeline > li .cbp_tmtime span:last-child{
+    font-size: 16px;
+}
+.cbp_tmtimeline > li .comment-panel{
+    position: absolute;
+    right: -18px;
+    bottom: 0px;
+    width: 20px;
+    font-size: 15px;
+
+}
