--- a/css/style.css
+++ b/css/style.css
@@ -209,10 +209,12 @@ ul {
   font-weight: 100 !important;
 }
 blockquote {
-  border-left: 5px solid #7761a7;
+  border-right: 5px solid #7761a7;
+  border-left: none;
 }
 blockquote.pull-right {
-  border-right: 5px solid #7761a7;
+  border-left: 5px solid #7761a7;
+  border-right: none;
 }
 .messages .pull-right{float:left!important;}
 /*Pre & Code*/
